<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:id="@+id/tableLayout"
             android:padding="5dp"
             android:stretchColumns="1,2,3">

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/tableRow0"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/billTextView"
                android:id="@+id/billTextView"
                />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/billEditText"
                android:enabled="false"
                android:layout_span="3"
                android:inputType="numberDecimal"/>

    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/tableRow1"
            android:gravity="center">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tenTextView"
                android:id="@+id/tenTextView"
                android:layout_column="1"
                android:gravity="center"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifteenTextView"
                android:id="@+id/fifteenTextView"
                android:gravity="center"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twentyTextView"
                android:id="@+id/tewentyTextView"
                android:focusableInTouchMode="true"
                android:gravity="center"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/tableRow2"
            android:gravity="center_vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipTextView"
                android:id="@+id/tipTextView"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tip10EditText"
                android:inputType="none"
                android:gravity="center"
                android:editable="false"
                android:enabled="false"
                android:focusable="@bool/False"
                android:longClickable="@bool/False"
                android:focusableInTouchMode="@bool/False"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tip20EditText"
                android:gravity="center"
                android:editable="false"
                android:enabled="false"
                android:focusable="@bool/False"
                android:longClickable="@bool/False"
                android:focusableInTouchMode="@bool/False"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tipl15EditText"
                android:gravity="center"
                android:editable="false"
                android:enabled="false"
                android:focusable="@bool/False"
                android:longClickable="@bool/False"
                android:focusableInTouchMode="@bool/False"/>

    </TableRow>

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/tableRow3"
            android:gravity="center_vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalTextView"
                android:id="@+id/totalTextView"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/total10EditText"
                android:gravity="center"
                android:editable="false"
                android:enabled="false"
                android:focusable="@bool/False"
                android:longClickable="@bool/False"
                android:focusableInTouchMode="@bool/False"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/total15EditText"
                android:gravity="center"
                android:editable="false"
                android:enabled="false"
                android:focusable="@bool/False"
                android:longClickable="@bool/False"
                android:focusableInTouchMode="@bool/False"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Total20EditText"
                android:gravity="center"
                android:editable="false"
                android:enabled="false"
                android:focusable="@bool/False"
                android:longClickable="@bool/False"
                android:focusableInTouchMode="@bool/False"/>

    </TableRow>

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/tableRow4"
            android:gravity="center_vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customTextView"
                android:id="@+id/customTextView"
                android:singleLine="false"/>

        <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/customSeekBar"
                android:layout_span="2"
                android:progress="18"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="5dp"
                android:focusable="false"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customTipTextView"
                android:id="@+id/customTipTextView"/>
    </TableRow>

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/tableRow5"
            android:gravity="center_vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipCustomTextView"
                android:id="@+id/tipCustomTextView"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/TipCustomTextEdit"
                android:gravity="center"
                android:editable="false"
                android:enabled="false"
                android:focusable="@bool/False"
                android:longClickable="@bool/False"
                android:focusableInTouchMode="@bool/False"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalCustomTextView"
                android:id="@+id/totalCustomTextView"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalCustomTextEdit"
                android:gravity="center"
                android:editable="false"
                android:enabled="false"
                android:focusable="@bool/False"
                android:longClickable="@bool/False"
                android:focusableInTouchMode="@bool/False"/>
    </TableRow>

</TableLayout>